<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="welcome_message">Welcome To Shoe Store</string>
    <string name="welcome_slogan">You are never too small to make a difference</string>
    <string name="learn_more">Learn More</string>
    <string name="instructions_message">How to manage the store</string>
    <string name="instructions_details_1">Observe all your shoes</string>
    <string name="instructions_details_2">Click on a shoe to update it</string>
    <string name="instructions_details_3">Click on add to make a new shoe</string>
    <string name="start">Start</string>
    <string name="add_new_shoe">No Shoes\nTry to add one</string>
    <string name="size">Size: %.2f</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="name">Name</string>
    <string name="size_no_format">Size</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>
</resources>
